Finally, client and server can implement the same api now for streaming methods